# GFDL_atmos_cubed_sphere

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  CMake_Instructions.md  CODE_STYLE.md  CONTRIBUTING_GUIDE.md  Makefile.am  README.md  RELEASE.md  TESTFILEDONTMERGE  configure.ac  makefile
.github/: pull_request_template.md
.github/.parallelworks/: README.md  checkout.sh  compile.sh  run_test.sh
.github/ISSUE_TEMPLATE/: bug_report.md  support_request.md
.github/workflows/: FMS_regression_ondemand.yml  SHiELD_parallelworks.yml  SHiELD_parallelworks_intel.yml  daily_cleanup_parallelworks.yaml  daily_cleanup_parallelworks.yml
GFDL_tools/: ALLDIFF_DEC30  ALLDIFF_JAN02  ALLDIFF_JAN03  DIFF_cmip_diag  Makefile.am  fv_ada_nudge.F90  fv_climate_nudge.F90  fv_cmip_diag.F90  fv_diag_column.F90  get_diff.sh  read_climate_nudge_data.F90
cmake/: FV3Config.cmake.in  FindESMF.cmake  compiler_flags_GNU_Fortran.cmake  compiler_flags_IntelLLVM_Fortran.cmake  compiler_flags_Intel_Fortran.cmake  fv3_compiler_flags.cmake
docker/: Dockerfile  Makefile
docker/patches/: PATCH-FMS-affinity.c-fix-getpid.patch  PATCH-FMS-libFMS_Makefile.am-add-sat-vapor-pres.patch  PATCH-fv3atm-apply-fixes.patch  PATCH-stochastic_physics-update_ca.F90-fix-logical-comparisons.patch
docker/work/: create_rundir.py  default.yaml  run_test.sh
docs/: AdvectionOperators.md  Chapter1.md  Chapter2.md  Chapter3.md  Chapter4.md  Chapter5.md  Chapter6.md  Chapter7.md  Chapter8.md  Chapter9.md  Doxyfile  DoxygenLayout.xml  FV3_citations.bib  Foreword.md  Forward.md  HOWTO_tracer-2024.11.md  Links.md  Preface.md  appendixB.md  appendixB1.md  appendixB2.md  documentation.dox  fv3_technical.tex  fv3_technical_2021.tex
docs/doc_source/: README  fv3_technical_2021.tex  fv3references.bib
docs/examples/: BCMoist.ipynb  BTwave.ipynb  DPSupercell.ipynb  HSzuritasuperrotation.ipynb  MountainWaveIC.ipynb  README  README.md  RHwave.ipynb  TC.ipynb  mtn_rest_100km.ipynb  mtn_wave_tests_1km.ipynb  tp_core.ipynb
docs/examples/FV3_level_transmogrifier/: FV3_level_transmogrifier.ipynb  f2py_fv_eta.sh  fv_eta.F90  fv_eta.h  plotting_utils.py  requirements.txt  sofar_33_levels  sofar_46_levels  sofar_91_levels  std_atmos_1976.txt  test_set_eta.f90
docs/ideal_doc/: README.md  create_ideal_sfc_oro_input.py
docs/ideal_processmodel_doc/: README.md  create_ideal_sfc_oro_input.py  input_sounding
driver/: Makefile.am
driver/GFDL/: ALLDIFF_JAN03  DIFF  DIFF_JAN02  DIFF_atmosphere  Makefile.am  atmosphere.F90  get_diff.sh
driver/GFDL/include/: atmosphere.inc  atmosphere_r4.fh  atmosphere_r8.fh
driver/SHiELD/: Makefile.am  atmosphere.F90  cloud_diagnosis.F90  constants.F90  gfdl_cloud_microphys.F90  lin_cloud_microphys.F90
driver/SHiELD/include/: atmosphere.inc  atmosphere_r4.fh  atmosphere_r8.fh
driver/SHiELDFULL/: atmosphere.F90
driver/SHiELDFULL/include/: atmosphere.inc  atmosphere_r4.fh  atmosphere_r8.fh
driver/UFS/: atmosphere.F90  fv_ideal.F90  fv_nggps_diag.F90  fv_processmodel.F90
driver/coupled/: atmosphere.F90  fv_physics.F90
driver/fvGFS/: DYCORE_typedefs.F90  atmosphere.F90  constants.F90  fv_nggps_diag.F90  fv_ufs_restart_io.F90  gfdl_cloud_microphys.F90  lin_cloud_microphys.F90
driver/solo/: atmosphere.F90  fv_phys.F90  hswf.F90  monin_obukhov_drag.F90  mp_lin.F90  ocean_rough.F90  qs_tables.F90
model/: ALLDIFF_JAN02  ALLDIFF_JAN03  DIFF_ALL  DIFF_FV_ARRAYS  DIFF_FV_CMP  Makefile.am  README_nh_core_fv3wam  a2b_edge.F90  boundary.F90  bounding_box.F90  cld_eff_rad.F90  dyn_core.F90  fast_phys.F90  fast_sat_adj.F90  fill_module.F90  fv_arrays.F90  fv_cmp.F90  fv_control.F90  fv_current_grid.F90  fv_dynamics.F90  fv_fill.F90  fv_grid_utils.F90  fv_mapz.F90  fv_moving_nest.F90  fv_moving_nest_logging.F90  fv_moving_nest_main.F90  fv_moving_nest_physics.F90  fv_moving_nest_utils.F90  fv_nesting.F90  fv_operators.F90  fv_pack.F90  fv_regional_bc.F90  fv_sg.F90  fv_thermodynamics.F90  fv_tracer2d.F90  fv_tracker.F90  fv_update_phys.F90  get_diff.sh  get_diff.sh~  gfdl_cld_mp.F90  (+18 more)
model_nh/: Makefile.am  README  nh_core.F90  nh_utils.F90
model_nh_32bit/: README
model_nh_64bit/: nh_core.F90
model_nh_null/: nh_core.F90
moving_nest/: bounding_box.F90  fv_moving_nest.F90  fv_moving_nest_main.F90  fv_moving_nest_physics.F90  fv_moving_nest_types.F90  fv_moving_nest_utils.F90  fv_tracker.F90
test/: Dockerfile  Dockerfile.base  Dockerfile.test
test/etc/: configure.fv3.gnu_docker
test/patches/: PATCH-fv3atm-atmos_model.F90-fix-logical-comparisons.patch
test/work/: create_rundir.py  run_test.sh
tools/: ALLDIFF  ALLDIFF_JAN02  ALLDIFF_JAN03  DIFF_FV_DIAGONISTCS  Makefile.am  coarse_grained_diagnostics.F90  coarse_grained_restart_files.F90  coarse_graining.F90  cubed_sphere_inc_mod.F90  external_aero.F90  external_ic.F90  external_ic.F90_65lyrs  external_ic.F90_NAM_lyrs  external_sst.F90  fv_ada_nudge.F90  fv_climate_nudge.F90  fv_cmip_diag.F90  fv_diag_column.F90  fv_diagnostics.F90  fv_diagnostics.h  fv_eta.F90  fv_eta.F90_NAM_lyrs  fv_eta.h  fv_grid_tools.F90  fv_iau_mod.F90  fv_io.F90  fv_mp_mod.F90  fv_netcdf.F90  fv_nggps_diag.F90  fv_nudge.F90  fv_restart.F90  fv_sg.F90  fv_surf_map.F90  fv_timing.F90  fv_treat_da_inc.F90  get_diff.sh  grid_tools.F90  hswf.F90  init_hydro.F90  module_cubed_sphere_inc.F90  (+13 more)
tools/test/: test_iau.F90  test_read.F90
