# This is the main automake file for GFDL_atmos_cubed_sphere.
# Ed Hartnett 7/22/2019

# This directory stores libtool macros, put there by aclocal.
ACLOCAL_AMFLAGS = -I m4

# Make targets will be run in each subdirectory. Order is significant.
SUBDIRS = driver GFDL_tools model model_nh tools

EXTRA_DIST = README.md LICENSE.md
